--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,15 +2,15 @@
     <div class="login-register" style="background-image:url(../assets/images/background/login-register.jpg);">
         <div class="login-box card">
             <div class="card-body">
-                <form class="form-horizontal form-material" (ngSubmit)="ingresar()">
+                <form ngNativeValite #f="ngForm" class="form-horizontal form-material" (ngSubmit)="ingresar(f)">
                     <h3 class="box-title m-b-20">Sign In</h3>
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Username"> </div>
+                            <input ngModel name="email" class="form-control" type="email" required="" placeholder="Email"> </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Password"> </div>
+                            <input ngModel name="password" class="form-control" type="password" required="" placeholder="Password"> </div>
                     </div>
                     <div class="form-group row">
                         <div class="col-md-12">
@@ -21,7 +21,7 @@
                     </div>
                     <div class="form-group text-center">
                         <div class="col-xs-12 p-b-20">
-                            <button class="btn btn-block btn-lg btn-info btn-rounded" type="submit">Ingresar</button>
+                            <button class="btn btn-block btn-lg btn-info btn-rounded" type="submit">Log In</button>
                         </div>
                     </div>
                     <div class="row">
