--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -1,40 +1,45 @@
-<section id="wrapper">
-    <div class="login-register" style="background-image:url(../assets/images/background/login-register.jpg);">
+<!-- <section id="wrapper">
+
+    <div class="login-register" style="background-image:url(assets/images/background/login-register.jpg);">
         <div class="login-box card">
             <div class="card-body">
-                <form class="form-horizontal form-material" id="loginform" action="index.html">
-                    <h3 class="box-title m-b-20">Sign Up</h3>
+                <form [formGroup]="forma" (ngSubmit)="registro()" class="form-horizontal form-material">
+                    <h3 class="box-title m-b-20 text-center">Registrarse</h3><br><br>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Name">
+                            <input formControlName="nombre" name="nombre" class="form-control" type="text" required placeholder="Name">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Email">
+                            <input formControlName="email" name="email" class="form-control" type="email" required placeholder="Email">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Password">
+                            <input formControlName="password" name="password" class="form-control" type="password" required placeholder="Password">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Confirm Password">
+                            <input formControlName="password2" name="password2" class="form-control" type="password" required placeholder="Confirm Password">
                         </div>
                     </div>
+                    <div class="form-group ">
+                        <p class="text-danger"> Las contraseñas deben ser iguales</p>
+                    </div>
+
                     <div class="form-group row">
                         <div class="col-md-12">
                             <div class="checkbox checkbox-success p-t-0">
-                                <input id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
-                                <label for="checkbox-signup"> I agree to all <a href="javascript:void(0)">Terms</a></label>
+                                <input formControlName="condiciones" name="condiciones" id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
+                                <label for="checkbox-signup"> Acepto los terminos<a href="javascript:void(0)">Terminos</a></label>
                             </div>
                         </div>
                     </div>
                     <div class="form-group text-center p-b-20">
                         <div class="col-xs-12">
-                            <button class="btn btn-info btn-lg btn-block btn-rounded text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
+                            <button class="btn btn-info btn-lg btn-block btn-rounded text-uppercase waves-effect waves-light" type="submit">Registrarme</button>
                         </div>
                     </div>
                     <div class="form-group m-b-0">
@@ -44,6 +49,64 @@
                     </div>
                 </form>
             </div>
+        </div>
+    </div>
+</section> -->
+<section id="wrapper" class="login-register login-sidebar" style="background-image:url(../assets/images/background/login-register.jpg);">
+    <div class="login-box card">
+        <div class="card-body">
+            <form [formGroup]="forma" (ngSubmit)="registro()" class="form-horizontal form-material">
+                <a href="javascript:void(0)" class="text-center db"><img src="../assets/images/logo-icon.png" alt="Home" /><br/><img src="../assets/images/logo-text.png" alt="Home" /></a>
+                <h3 class="box-title m-t-40 m-b-0">Register Now</h3><small>Create your account and enjoy</small>
+                <br><br><br>
+                <div class="form-group">
+                    <div class="col-xs-12">
+                        <input formControlName="nombre" name="nombre" class="form-control" type="text" required placeholder="Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-xs-12">
+                        <input formControlName="apellido" name="apellido" class="form-control" type="text" required placeholder="Apellido">
+                    </div>
+                </div>
+                <div class="form-group ">
+                    <div class="col-xs-12">
+                        <input formControlName="email" name="email" class="form-control" type="email" required placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-group ">
+                    <div class="col-xs-12">
+                        <input formControlName="password" name="password" class="form-control" type="password" required placeholder="Password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-xs-12">
+                        <input formControlName="password2" name="password2" class="form-control" type="password" required placeholder="Confirm Password">
+                    </div>
+                </div>
+                <div class="form-group " *ngIf="forma.errors?.passEquals $$ !forma.pristine">
+                    <p class="text-danger"> Las contraseñas deben ser iguales</p>
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-md-12">
+                        <div class="checkbox checkbox-success p-t-0">
+                            <input formControlName="condiciones" name="condiciones" id="checkbox-signup" type="checkbox" class="filled-in chk-col-light-blue">
+                            <label for="checkbox-signup"> Acepto los terminos<a href="javascript:void(0)">Terminos</a></label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group text-center p-b-20">
+                    <div class="col-xs-12">
+                        <button class="btn btn-info btn-lg btn-block btn-rounded text-uppercase waves-effect waves-light" type="submit">Registrarme</button>
+                    </div>
+                </div>
+                <div class="form-group m-b-0">
+                    <div class="col-sm-12 text-center">
+                        Already have an account? <a [routerLink]="['/login']" class="text-info m-l-5"><b>Sign In</b></a>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </section>
