--- a/src/app/login/register.component.html
+++ b/src/app/login/register.component.html
@@ -84,7 +84,7 @@
                         <input formControlName="password2" name="password2" class="form-control" type="password" required placeholder="Confirm Password">
                     </div>
                 </div>
-                <div class="form-group " *ngIf="forma.errors?.passEquals $$ !forma.pristine">
+                <div class="form-group " *ngIf="forma.errors?.passEquals && !forma.pristine">
                     <p class="text-danger"> Las contraseñas deben ser iguales</p>
                 </div>
 
