--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -8,14 +8,15 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li class="user-profile">
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img src="../assets/images/users/profile.png" alt="user" /><span class="hide-menu">Steave Jobs </span></a>
+                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img [src]="usuario.avatar | imagen" alt="user" /><span class="hide-menu"> {{usuario.nombre }} </span></a>
                     <ul aria-expanded="false" class="collapse">
-                        <li><a href="javascript:void()">My Profile </a></li>
-                        <li><a href="javascript:void()">My Balance</a></li>
-                        <li><a href="javascript:void()">Inbox</a></li>
-                        <li><a href="javascript:void()">Account Setting</a></li>
                         <li>
-                            <a (click)="logOut()" class="pointer">Logout</a>
+                            <a [routerLink]="['/profile']" routerLinkActive="active">My Profile </a></li>
+                        <li><a href="javascript:void() ">My Balance</a></li>
+                        <li><a href="javascript:void() ">Inbox</a></li>
+                        <li><a href="javascript:void() ">Account Setting</a></li>
+                        <li>
+                            <a (click)="logOut() " class="pointer ">Logout</a>
                         </li>
                     </ul>
                 </li>
