--- a/src/app/pages/list-users/list-users.component.html
+++ b/src/app/pages/list-users/list-users.component.html
@@ -1,8 +1,64 @@
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="../../../assets/images/users/avatar.png" alt="Card image cap">
-    <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="row animated fadeIn" *ngIf="!cargando">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+
+                <h3 class="card-title">Usuarios Registrados (<small> {{totalReg}} </small>) </h3>
+
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>Imagen</th>
+                            <th>Email</th>
+                            <th>Nombre</th>
+                            <th>Rol</th>
+                            <th></th>
+
+                        </tr>
+
+
+                    </thead>
+                    <tbody *ngFor="let usuario of usuarios; let i=index ">
+
+
+                        <tr>
+                            <td *ngIf="usuario._id!==usuarioService.usuario._id" class="w-70"><img [src]="usuario.avatar | imagen" class="img-50 img-circle"></td>
+                            <td *ngIf="usuario._id!==usuarioService.usuario._id">{{usuario.email}} </td>
+                            <td *ngIf="usuario._id!==usuarioService.usuario._id">{{usuario.nombre+' '+usuario.apellido}}</td>
+                            <td *ngIf="usuario._id!==usuarioService.usuario._id"><select [(ngModel)]="usuario.tipo_usuario" name="tipo_usuario" class="form-control">
+                                <option value="ADMIN_USER">ADMIN_USER</option>
+                                <option value="USER_CLIENT">USER_CLIENT</option>
+                            </select></td>
+                            <td *ngIf="usuario._id!==usuarioService.usuario._id"><button class=" btn btn-primary" (click)="guardarUsuario(usuario)"></button>
+                                <button class="btn btn-danger " (click)="borrar(usuario)"></button>
+                                <button class="btn btn-success" type="button" (click)="editItem(usuario)">
+                                    </button></td>
+
+
+
+                        </tr>
+
+
+                    </tbody>
+
+
+
+                </table>
+                <nav aria-label=" Page navigation example ">
+                    <ul class="pagination justify-content-center ">
+                        <li class="page-item "><a class="page-link pointer " (click)="cambiarDesde(-5) ">Previous</a></li>
+                        <li class="page-item ">
+                            <a class="page-link " href="# "> {{desde/5+1}} </a>
+                        </li>
+
+                        <li class="page-item "><a class="page-link pointer " (click)="cambiarDesde(5) ">Next</a></li>
+                    </ul>
+                </nav>
+
+
+
+            </div>
+        </div>
     </div>
+
 </div>
