--- a/src/app/pages/edit-user/edit-user.component.html
+++ b/src/app/pages/edit-user/edit-user.component.html
@@ -1,11 +1,17 @@
 <div class="modal-header modal-lg">
-    <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
+    <h4 class="modal-title" id="modal-basic-title"> Actualizar usuario</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
+
+
+
+
     <form #form="ngForm" (ngSubmit)="ActualizarUsuario(form.value)">
+
+
 
         <div class="form-group row ">
             <label class="col-sm-3 control-label ">Nombres*</label>
@@ -39,7 +45,7 @@
             <label class="col-sm-3 control-label ">Nacimiento*</label>
             <div class="col-sm-9 ">
                 <div class="input-group ">
-                    <div class="input-group-addon "><i class="ti-user "></i></div>
+                    <div class="input-group-addon "><i class="ti-gift  "></i></div>
                     <input [ngModel]="usuario.fecha_nacimiento" name="fecha_nacimiento" type="text " class="form-control " placeholder="DD/MM/AAAA ">
                 </div>
             </div>
@@ -48,7 +54,7 @@
             <label class="col-sm-3 control-label ">Pais*</label>
             <div class="col-sm-9 ">
                 <div class="input-group ">
-                    <div class="input-group-addon "><i class="ti-user "></i></div>
+                    <div class="input-group-addon "><i class="ti-location-pin "></i></div>
                     <input [ngModel]="usuario.pais" name="pais" type="text " class="form-control " placeholder="Digite pais ">
                 </div>
             </div>
@@ -57,7 +63,7 @@
             <label class="col-sm-3 control-label ">Ciudad*</label>
             <div class="col-sm-9 ">
                 <div class="input-group ">
-                    <div class="input-group-addon "><i class="ti-user "></i></div>
+                    <div class="input-group-addon "><i class="ti-location-pin "></i></div>
                     <input [ngModel]="usuario.ciudad" name="ciudad" type="text " class="form-control " placeholder="Digite ciudad ">
                 </div>
             </div>
@@ -65,10 +71,13 @@
         <div class="form-group row ">
             <label class="col-sm-3 control-label ">Tipo de Usuario*</label>
             <div class="col-sm-9 ">
-                <select name="tipo_usuario" class="form-control">
+                <div class="input-group ">
+                    <div class="input-group-addon "><i class="ti-shield"></i></div>
+                    <select [ngModel]="usuario.tipo_usuario" name="tipo_usuario" class="form-control">
                     <option value="ADMIN_USER">ADMIN_USER</option>
                     <option value="USER_CLIENT">USER_CLIENT</option>
                 </select>
+                </div>
             </div>
         </div>
 
@@ -92,10 +101,13 @@
             </div>
         </div>
 
-        <div class="form-group row m-b-0 ">
-            <div class="offset-sm-3 col-sm-9 ">
-                <button type="submit " class="btn btn-success waves-effect waves-light ">Guardar</button>
-            </div>
+
+
+        <div class="modal-footer">
+            <button type="button" class="btn btn-outline-danger" (click)="modal.dismiss('Cross click')">Cancelar</button>
+
+            <button type="submit" class="btn btn-outline-success">Actualizar</button>
+
         </div>
 
 
@@ -106,10 +118,6 @@
 
 
 
-
-
     </form>
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
+
 </div>
