--- a/src/app/pages/list-users/list-users.component.html
+++ b/src/app/pages/list-users/list-users.component.html
@@ -4,7 +4,9 @@
             <div class="card-body">
 
                 <h3 class="card-title">Usuarios Registrados (<small> {{totalReg}} </small>) </h3>
-
+                <div class="text-right">
+                    <button class="btn btn-success " type="button" (click)="createUser()"><i class="ti-plus"></i></button>
+                </div>
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -22,17 +24,18 @@
 
 
                         <tr>
-                            <td *ngIf="usuario._id!==usuarioService.usuario._id" class="w-70"><img [src]="usuario.avatar | imagen" class="img-50 img-circle"></td>
+                            <td *ngIf="usuario._id!==usuarioService.usuario._id" class="w-70 pointer " (click)="editPhoto(usuario)"><img class="pointer" [src]="usuario.avatar | imagen" class="img-50 img-circle"></td>
                             <td *ngIf="usuario._id!==usuarioService.usuario._id">{{usuario.email}} </td>
                             <td *ngIf="usuario._id!==usuarioService.usuario._id">{{usuario.nombre+' '+usuario.apellido}}</td>
                             <td *ngIf="usuario._id!==usuarioService.usuario._id"><select [(ngModel)]="usuario.tipo_usuario" name="tipo_usuario" class="form-control">
                                 <option value="ADMIN_USER">ADMIN_USER</option>
                                 <option value="USER_CLIENT">USER_CLIENT</option>
                             </select></td>
-                            <td *ngIf="usuario._id!==usuarioService.usuario._id"><button class=" btn btn-primary" (click)="guardarUsuario(usuario)"></button>
-                                <button class="btn btn-danger " (click)="borrar(usuario)"></button>
-                                <button class="btn btn-success" type="button" (click)="editItem(usuario)">
-                                    </button></td>
+                            <td *ngIf="usuario._id!==usuarioService.usuario._id"><button class=" btn btn-primary" (click)="guardarUsuario(usuario)"><i class="fas fa-save fa-1x"></i></button>
+                                <button class="btn btn-success ml-1" type="button" (click)="editItem(usuario)"><i class="fas fa-user-edit"></i></button>
+                                <button class="btn btn-danger ml-1 " (click)="borrar(usuario)"><i class="fas fa-user-times"></i></button>
+
+                            </td>
 
 
 
