--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,7 @@
 }
 
 .w150 {
-    width: 37%;
-    border-radius: 10px;
+    width: 80%;
 }
 
 .w-70 {
@@ -14,4 +13,9 @@
 .img-50 {
     width: 50px;
     ;
+}
+
+.w400 {
+    width: 100%;
+    text-align: center;
 }
